--- a/source/website/css/website.css
+++ b/source/website/css/website.css
@@ -24,23 +24,31 @@ div.title
 
 div.title div.title_left
 {
+	width: 190px;
+	height: 40px;
 	float: left;
+
+
 }
 
-div.title svg.logo_image
+div.title div.title_left a
 {
-	width: 190px;
+	text-decoration: none;
+}
+
+div.title img.logo_image
+{
+	width: 40px;
 	height: 40px;
 	float: left;
 }
 
-div.title div.logo_text
+div.title div.logo_image_text
 {
 	color: var(--ov_foreground_color);
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: bold;
-	padding: 9px;
-	float: left;
+	padding-top: 10px;
 }
 
 div.title div.title_right
@@ -87,13 +95,30 @@ div.intro div.intro_logo
 	margin-bottom: 30px;
 }
 
-div.intro svg.intro_logo
+div.intro div.intro_logo_container
 {
+	margin: 0px auto;
+	position: relative;
 	width: 381px;
 	height: 80px;
-	max-width: 90%;
-	margin-bottom: 20px;
+
 }
+
+div.intro div.intro_logo_container img.intro_logo
+{
+	width: 60px;
+	height: 60px;
+	float: left;
+
+}
+
+div.intro div.intro_logo_container div.intro_logo_text
+{
+	font-size: 35px;
+	padding-top: 7px;
+	font-weight: bold;
+}
+
 
 div.intro div.intro_dragdrop_text
 {
@@ -122,12 +147,7 @@ div.intro div.intro_file_formats a
 	margin: 6px 4px;
 	border: 1px solid var(--ov_outline_button_color);
 	display: inline-block;
-	cursor: pointer;
-}
-
-div.intro div.intro_file_formats a:hover
-{
-	background: var(--ov_outline_button_hover_color);
+	cursor: auto;
 }
 
 div.noembed
