--- a/source/website/css/website.css
+++ b/source/website/css/website.css
@@ -46,7 +46,7 @@ div.title img.logo_image
 div.title div.logo_image_text
 {
 	color: var(--ov_foreground_color);
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: bold;
 	padding-top: 10px;
 }
@@ -82,39 +82,64 @@ div.intro
 
 div.intro_content
 {
-	width: 500px;
+
 	max-width: 90%;
-	margin: 0px auto;
-	position: relative;
+	display: inline-block;
+	margin: 0 auto;
+    position: relative;
+
+}
+
+div.intro_container
+{
+	max-width:500px;
+	float: inline-start;
+
+}
+
+div.intro_container_image
+{
+	max-width:380px;
+	float: inline-start;
+}
+
+div.intro_container_image img.intro_main_image
+{
+	max-width: 100%;
+	max-height:auto;
+	display: block;
+    margin: 0 auto;
+
 }
 
 div.intro div.intro_logo
 {
 	border-bottom: 1px solid var(--ov_border_color);
-	padding-bottom: 30px;
-	margin-bottom: 30px;
+	padding-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 div.intro div.intro_logo_container
 {
 	margin: 0px auto;
 	position: relative;
-	width: 381px;
-	height: 80px;
+	max-width: 381px;
+	max-height: 80px;
+	padding: 30px 0;
 
 }
 
 div.intro div.intro_logo_container img.intro_logo
 {
-	width: 60px;
-	height: 60px;
+	max-width: 60px;
+	max-height: 60px;
 	float: left;
 
 }
 
 div.intro div.intro_logo_container div.intro_logo_text
 {
-	font-size: 35px;
+	font-size: 2.1em;
 	padding-top: 7px;
 	font-weight: bold;
 }
@@ -392,11 +417,6 @@ div.ov_toolbar div.ov_toolbar_button:hover
 @media (max-width: 350px), (max-height: 620px)
 {
 
-div.intro_content
-{
-	margin: 0px auto;
-}
-
 div.intro div.intro_logo
 {
 	display: none;
@@ -404,18 +424,33 @@ div.intro div.intro_logo
 
 }
 
-@media (max-width: 800px)
+@media (max-width: 400px)
 {
 
-div.intro_content
+
+div.intro div.intro_logo_container div.intro_logo_text
 {
-	width: auto;
+	font-size: 26px;
+
 }
+
+
+}
+
+@media (max-width: 800px)
+{
 
 div.main_viewer canvas
 {
 	border: 0px;
 	margin: 0px;
+}
+
+div.intro_content
+{
+	max-width:90%;
+	position: unset;
+
 }
 
 div.ov_dialog
@@ -433,4 +468,33 @@ div.ov_bottom_floating_panel
 	padding: 10px;
 }
 
+}
+
+@media (max-width: 924px)
+{
+
+div.intro_container
+{
+
+	float: none;
+	display: inline-block;
+
+}
+
+div.intro_container_image
+{
+	float: none;
+	display: inline-block;
+
+}
+}
+
+@media (max-width: 1025px)
+{
+
+div.intro_content
+{
+	max-width:100%;
+
+}
 }
