feat: progress img

--- a/source/website/css/dialogs.css
+++ b/source/website/css/dialogs.css
@@ -236,7 +236,7 @@ div.ov_progress
 	}
 }
 
-div.ov_progress div.ov_progress_img svg
+div.ov_progress div.ov_progress_img img
 {
 	width: 80px;
 	height: 80px;
